<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="form_title_user_form" tools:ignore="UnusedResources">Profile</string>
	<string name="form_title_photo_form" tools:ignore="UnusedResources">Photo</string>
	<string name="form_title_about_form" tools:ignore="UnusedResources">About Patchr</string>
	<string name="form_title_map_form" tools:ignore="UnusedResources">Map</string>
	<string name="form_title_search_form" tools:ignore="UnusedResources">Search</string>
	<string name="form_title_settings_form" tools:ignore="UnusedResources">Settings</string>
	<string name="form_title_patch_edit" tools:ignore="UnusedResources">Edit patch</string>
	<string name="form_title_patch_new" tools:ignore="UnusedResources">New patch</string>
	<string name="form_title_message_edit" tools:ignore="UnusedResources">Edit message</string>
	<string name="form_title_message_new" tools:ignore="UnusedResources">Compose</string>
	<string name="form_title_user_edit" tools:ignore="UnusedResources">Edit profile</string>
	<string name="form_title_feedback_edit" tools:ignore="UnusedResources">Send feedback</string>
	<string name="form_title_report_edit" tools:ignore="UnusedResources">Report a problem</string>
	<string name="form_title_password_edit" tools:ignore="UnusedResources">Change password</string>
	<string name="form_title_signin_edit" tools:ignore="UnusedResources">Sign in</string>
	<string name="form_title_register_edit" tools:ignore="UnusedResources">Join Patchr</string>
	<string name="form_title_reset_edit" tools:ignore="UnusedResources">Password reset</string>
	<string name="form_title_proximity_edit" tools:ignore="UnusedResources">Tune patch proximity</string>
	<string name="form_title_privacy_builder" tools:ignore="UnusedResources">Privacy setting</string>
	<string name="form_title_category_builder" tools:ignore="UnusedResources">Category</string>
	<string name="form_title_photo_picker" tools:ignore="UnusedResources">Photo search</string>
	<string name="form_title_location_picker" tools:ignore="UnusedResources">Set patch location</string>
	<string name="form_title_patch_list" tools:ignore="UnusedResources">Patches</string>
	<string name="form_title_nearby" tools:ignore="UnusedResources">Nearby</string>
	<string name="form_title_watch" tools:ignore="UnusedResources">Watching</string>
	<string name="form_title_create" tools:ignore="UnusedResources">My patches</string>
	<string name="form_title_trends_popular" tools:ignore="UnusedResources">Most popular</string>
	<string name="form_title_trends_active" tools:ignore="UnusedResources">Most active</string>
	<string name="form_title_notifications" tools:ignore="UnusedResources">Notifications</string>
	<string name="form_title_likes_list" tools:ignore="UnusedResources">People who like this</string>
	<string name="form_title_watching_list" tools:ignore="UnusedResources">People who are watching this</string>
	<string name="menu_item_add_entity">Add content</string>
	<string name="menu_item_refresh">Refresh</string>
	<string name="menu_item_notifications">Notifications</string>
	<string name="menu_item_edit">Edit</string>
	<string name="menu_item_edit_user">Edit profile</string>
	<string name="menu_item_share">Share</string>
	<string name="menu_item_search">Search</string>
	<string name="menu_item_navigate">Directions</string>
	<string name="menu_item_settings">Settings</string>
	<string name="menu_item_help">Help</string>
	<string name="menu_item_signout">Sign out</string>
	<string name="menu_item_signin">Sign in</string>
	<string name="menu_item_send">Send</string>
	<string name="menu_item_invite">Invite</string>
	<string name="menu_item_map">Map location</string>
	<string name="menu_item_tune">Tune</string>
	<string name="menu_item_feedback">Feedback</string>
	<string name="menu_item_delete">Delete</string>
	<string name="menu_item_remove">Remove</string>
	<string name="menu_item_accept">Accept</string>
	<string name="menu_item_save">"  Save  "</string>
	<string name="menu_item_cancel">Cancel</string>
	<string name="menu_item_new_patch">New patch</string>
	<string name="menu_item_edit_patch">Edit</string>
	<string name="menu_item_edit_message">Edit</string>
	<string name="menu_item_share_message">Share</string>
	<string name="menu_item_share_patch">Invite</string>
	<string name="menu_item_view_as_map">View as map</string>
	<string name="menu_item_view_as_list">View as list</string>
	<string name="menu_item_report">Report abuse</string>
	<string name="menu_item_qrcode">Show QR code</string>
	<string name="help_nearby_browse_patches">Radar finds [@string/container_plural_lowercase] nearby you can browse and interact with.</string>
	<string name="help_nearby_new_patches">Use the action bar to make and share custom [@string/container_plural_lowercase].</string>
	<string name="help_patch_tune">Tune [@string/container_plural_lowercase] to make them better.</string>
	<string name="dialog_ok">OK</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="dialog_address_builder_title" tools:ignore="UnusedResources">Address</string>
	<string name="dialog_category_builder_title">Category</string>
	<string name="dialog_place_picker_search_title">Pick a [@string/container_singular_lowercase]</string>
	<string name="dialog_photo_picker_search_title">Photo search</string>
	<string name="dialog_photo_action_title">Select photo</string>
	<string name="dialog_photo_action_search">Search for photos</string>
	<string name="dialog_photo_action_gallery">Select a gallery photo</string>
	<string name="dialog_photo_action_edit">Edit photo</string>
	<string name="dialog_photo_action_camera">Take a new photo</string>
	<string name="dialog_photo_action_default">Default</string>
	<string name="dialog_update_title">Update available</string>
	<string name="dialog_update_message">Please update to the latest version of [@string/name_app].</string>
	<string name="dialog_update_ok">Update</string>
	<string name="dialog_update_cancel">No thanks</string>
	<string name="dialog_aviary_title">Aviary Photo Editor</string>
	<string name="dialog_aviary_message">Make your Patchr photos perfect using the Aviary photo editor.</string>
	<string name="dialog_aviary_ok">Install</string>
	<string name="dialog_aviary_cancel">No thanks</string>
	<string name="dialog_unwatch_private_title" tools:ignore="UnusedResources">Leave private [@string/container_singular_lowercase]</string>
	<string name="dialog_unwatch_private_message" tools:ignore="UnusedResources">If you leave a private [@string/container_singular_lowercase], content will no longer be visible to you.</string>
	<string name="dialog_unwatch_private_ok" tools:ignore="UnusedResources">Leave</string>
	<string name="dialog_unwatch_private_cancel" tools:ignore="UnusedResources">Cancel</string>
	<string name="dialog_watch_private_title" tools:ignore="UnusedResources">Watch private [@string/container_singular_lowercase]</string>
	<string name="dialog_watch_private_message" tools:ignore="UnusedResources">A request to watch this [@string/container_singular_lowercase] will be sent to the [@string/container_singular_lowercase] owner.</string>
	<string name="dialog_watch_private_ok" tools:ignore="UnusedResources">Watch</string>
	<string name="dialog_watch_private_cancel" tools:ignore="UnusedResources">Cancel</string>
	<string name="dialog_decline_approved_private_title" tools:ignore="UnusedResources">Remove watcher</string>
	<string name="dialog_decline_approved_private_message" tools:ignore="UnusedResources">The watcher will be removed and unable to view content for this [@string/container_singular_lowercase].</string>
	<string name="dialog_decline_approved_private_ok" tools:ignore="UnusedResources">Remove</string>
	<string name="dialog_decline_approved_private_cancel" tools:ignore="UnusedResources">Cancel</string>
	<string name="dialog_decline_requested_private_title" tools:ignore="UnusedResources">Decline request</string>
	<string name="dialog_decline_requested_private_message" tools:ignore="UnusedResources">The watch request will be declined and removed from the list.</string>
	<string name="dialog_decline_requested_private_ok" tools:ignore="UnusedResources">Decline</string>
	<string name="dialog_decline_requested_private_cancel" tools:ignore="UnusedResources">Cancel</string>
	<string name="dialog_location_services_disabled_title">Location services disabled</string>
	<string name="dialog_location_services_disabled_message">[@string/name_app] works better with access to your location. Please turn on location access.</string>
	<string name="dialog_location_services_disabled_ok">Settings</string>
	<string name="dialog_location_services_disabled_cancel">Ignore</string>
	<string name="dialog_qrcode_message">Scan this code to join a patch</string>
	<string name="alert_entity_locked">This [@schema] has been locked by the owner.</string>
	<string name="alert_wifi_tethered">Turn off hotspot tethering for best results using [@string/name_app].</string>
	<string name="alert_wifi_disabled">Enable wifi for best results using [@string/name_app].</string>
	<string name="alert_deleted">Deleted</string>
	<string name="alert_removed">Removed</string>
	<string name="alert_updated">Updated</string>
	<string name="alert_inserted">Saved</string>
	<string name="alert_inserted_patch">Patch activated</string>
	<string name="alert_shared">Shared</string>
	<string name="alert_cancelled">Cancelled</string>
	<string name="alert_signed_in">Signed in as</string>
	<string name="symbol_bullet">&#8226;</string>
	<string name="button_sign_in">Sign in</string>
	<string name="button_register">Join</string>
	<string name="button_terms">Terms of Service</string>
	<string name="button_privacy">Privacy policy</string>
	<string name="button_legal">Open source licenses</string>
	<string name="button_forgot_password">Forgot password?</string>
	<string name="label_fullname">Full name</string>
	<string name="label_password">Password (6 characters or more)</string>
	<string name="label_password_unmask">Show password</string>
	<string name="label_terms">By joining, you agree to the</string>
	<string name="label_email">Email</string>
	<string name="label_about_install">Install</string>
	<string name="label_report_option_spam">Spam</string>
	<string name="label_report_option_abusive">Abusive or harassing</string>
	<string name="label_report_option_porn">Obscene or pornagraphic</string>
	<string name="label_report_option_incorrect">Incorrect or missing</string>
	<string name="label_report_option_other">Other</string>
	<string name="label_report_description_hint">Additional information (optional)</string>
	<string name="label_register_message">You\'ll love Patchr! Join to post messages, create patches and share with your friends.</string>
	<string name="label_drawer_item_nearby">Nearby</string>
	<string name="label_drawer_item_watch">Watching</string>
	<string name="label_drawer_item_create">Owner</string>
	<string name="label_drawer_item_trend_active">Most active</string>
	<string name="label_drawer_item_more_settings">Settings</string>
	<string name="hint_phone">Phone</string>
	<string name="hint_address">Address</string>
	<string name="hint_state">State</string>
	<string name="hint_city">City</string>
	<string name="hint_zipcode">Zipcode</string>
	<string name="dummy_name" tools:ignore="UnusedResources">Jay Massena</string>
	<string name="dummy_copyright" tools:ignore="UnusedResources">&#169;2013 3meters LLC.</string>
	<string name="dummy_version" tools:ignore="UnusedResources">Version: 0.9.35 (76)</string>
	<string name="dummy_install_id" tools:ignore="TypographyDashes">f8953a63-2019-4793-9b03-e93370913c4b</string>
	<string name="dummy_install_date" tools:ignore="UnusedResources">December 23 at 10:12am</string>
	<string name="dummy_install_type" tools:ignore="UnusedResources">serial_num</string>
	<string name="dummy_timesince" tools:ignore="UnusedResources">10 minutes ago</string>
</resources>