<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:gravity="center_vertical"
	android:orientation="horizontal">

	<com.patchr.ui.widgets.AirTextView
		android:id="@+id/widget_name"
		style="@style/candi_user"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:textColor="#ffffffff"
		android:text="@string/dummy_name" />

	<com.patchr.ui.widgets.AirTextView
		style="@style/bullet"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:paddingLeft="3dp"
		android:paddingRight="3dp"
		android:text="@string/symbol_bullet" />

	<com.patchr.ui.widgets.AirTextView
		android:id="@+id/timesince"
		style="@style/candi_user"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:textColor="#ffffffff"
		android:text="@string/dummy_timesince" />

</LinearLayout>