<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include
		android:id="@+id/toolbar"
		layout="@layout/include_toolbar_actionbar" />

	<com.patchr.ui.widgets.AirLinearLayout
		style="@style/form_content_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top|center_horizontal"
		android:orientation="vertical"
		android:paddingTop="20dp">

		<!-- Title and Content -->

		<com.patchr.ui.widgets.AirEditText
			android:id="@+id/email"
			style="@style/form_edit"
			android:layout_width="match_parent"
			android:layout_height="@dimen/form_field_height"
			android:layout_marginBottom="8dp"
			android:drawableRight="?attr/iconClear"
			android:hint="@string/label_email"
			android:inputType="textEmailAddress" />

		<com.patchr.ui.widgets.AirEditText
			android:id="@+id/password"
			style="@style/form_edit"
			android:layout_width="match_parent"
			android:layout_height="@dimen/form_field_height"
			android:layout_marginBottom="4dp"
			android:drawableRight="?attr/iconClear"
			android:hint="@string/label_password"
			android:imeOptions="actionGo"
			android:inputType="textPassword" />

		<com.patchr.ui.widgets.AirCheckBox
			android:id="@+id/chk_unmask"
			style="@style/form_checkbox"
			android:layout_width="match_parent"
			android:layout_height="@dimen/form_field_height"
			android:layout_marginBottom="8dp"
			android:textAppearance="?android:attr/textAppearance"
			android:text="@string/label_password_unmask" />

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			android:paddingLeft="4dp"
			android:paddingRight="4dp">

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/button_height"
				android:background="@color/brand_accent" />

			<Button
				android:id="@+id/login_button"
				style="@style/button_link"
				android:layout_width="match_parent"
				android:layout_height="@dimen/button_height"
				android:minWidth="200dp"
				android:onClick="onClick"
				android:textColor="@color/white"
				android:text="@string/button_sign_in" />
		</RelativeLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:orientation="horizontal"
			android:paddingLeft="4dp"
			android:paddingRight="4dp">

			<Button
				android:id="@+id/forgot_password_button"
				style="@style/button_link"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="4dp"
				android:layout_weight="1"
				android:onClick="onClick"
				android:text="@string/button_forgot_password" />

			<Button
				android:id="@+id/signup_button"
				style="@style/button_link"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				android:layout_weight="1"
				android:onClick="onClick"
				android:text="@string/button_register" />
		</LinearLayout>

	</com.patchr.ui.widgets.AirLinearLayout>
</LinearLayout>