<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include
		android:id="@+id/toolbar"
		layout="@layout/include_toolbar_actionbar" />

	<com.patchr.ui.widgets.AirLinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="vertical">

		<com.patchr.ui.widgets.AirTextLight
			android:id="@+id/content_message"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:background="?attr/backgroundFormSecondary"
			android:padding="16dp" />

		<!-- Title and Content -->

		<LinearLayout
			android:id="@+id/holder_body"
			style="@style/form_content_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<RadioGroup
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:orientation="vertical">

				<com.patchr.ui.widgets.AirRadioButton
					android:id="@+id/radio_spam"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:onClick="onRadioButtonClicked"
					android:tag="spam"
					android:text="@string/label_report_option_spam" />

				<com.patchr.ui.widgets.AirRadioButton
					android:id="@+id/radio_abusive"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:onClick="onRadioButtonClicked"
					android:tag="abusive"
					android:text="@string/label_report_option_abusive" />

				<com.patchr.ui.widgets.AirRadioButton
					android:id="@+id/radio_porn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:onClick="onRadioButtonClicked"
					android:tag="obscene"
					android:text="@string/label_report_option_porn" />

				<com.patchr.ui.widgets.AirRadioButton
					android:id="@+id/radio_incorrect"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:onClick="onRadioButtonClicked"
					android:tag="incorrect"
					android:text="@string/label_report_option_incorrect" />

				<com.patchr.ui.widgets.AirRadioButton
					android:id="@+id/radio_other"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					android:onClick="onRadioButtonClicked"
					android:tag="other"
					android:text="@string/label_report_option_other" />
			</RadioGroup>

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/rule_divider_height"
				android:layout_marginBottom="8dp"
				android:layout_marginLeft="4dp"
				android:layout_marginRight="4dp"
				android:background="?attr/ruleColor" />

			<com.patchr.ui.widgets.AirEditText
				android:id="@+id/description"
				style="@style/form_edit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:gravity="top"
				android:hint="@string/label_report_description_hint"
				android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
				android:minLines="5" />

			<com.patchr.ui.widgets.UserView
				android:id="@+id/created_by"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				custom:layoutId="@layout/widget_user_view_compact" />
		</LinearLayout>

	</com.patchr.ui.widgets.AirLinearLayout>

</LinearLayout>